# socket_man

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
design/: .thumbnail  Relay.html  app.css  app.jsx  colors_and_type.css  data.js  environments.jsx  formats.jsx  icons.jsx  library.jsx  sidebar.jsx  util.jsx  workspace.jsx
docs/: codebase-summary.md  deployment-guide.md  system-architecture.md
docs/journals/: 2026-06-02-phase01-scaffold-ui-port.md  2026-06-02-phase02-rust-ws-engine-ipc.md  260602-e2e-webdriver-and-channel-skew-fix.md  260602-phases-4-7-http-secrets-rebrand-packaging.md
e2e/: local-echo-server.mjs  run-e2e.mjs  tauri-e2e.mjs
plans/260602-1457-socketman-tauri-rust-workbench/: phase-01-scaffold-ui-port.md  phase-02-rust-ws-engine-ipc.md  phase-03-ws-reliability.md  phase-04-http-client.md  phase-05-persistence-secrets.md  phase-06-rebrand-history.md  phase-07-windows-packaging.md  plan.md
plans/260603-0954-socketman-v2-ux-polish/: phase-01-notifications-keychain-feedback.md  phase-02-copy-save-export.md  phase-03-search-filter-virtualization.md  phase-04-code-generation-export.md  phase-05-format-fidelity.md  plan.md
plans/reports/: brainstorm-260602-1456-socketman-tauri-rust-architecture-report.md  code-reviewer-260602-phase4-7-security-review.md  docs-manager-260602-1830-socketman-phase1-seeding-report.md  from-code-reviewer-to-cook-phase-03-ws-reliability-review.md  from-code-reviewer-to-cook-phase01-port-review.md  from-code-reviewer-to-cook-phase2-ws-engine-review.md  journal-260602-1940-phase-03-ws-reliability.md  researcher-260602-1457-rust-ws-http-keychain-stack-report.md  researcher-260602-1457-tauri2-ipc-streaming-scaffolding-report.md
scripts/: assert-csp.mjs
src/: App.tsx  app-smoke.test.tsx  main.tsx  test-setup.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/http/: client.rs  mod.rs  types.rs
src-tauri/src/storage/: history.rs  mod.rs  resolve.rs  secrets.rs  store.rs
src-tauri/src/ws/: backoff.rs  cancel.rs  connection.rs  heartbeat.rs  manager.rs  mod.rs  reconnect.rs  request.rs  tls.rs  types.rs
src-tauri/tests/: http_integration.rs  storage_secrets_integration.rs  ws_integration.rs
src-tauri/tests/tls/: mod.rs
src/components/: collections-sidebar.tsx  composer.tsx  connection-bar.tsx  copy-as-menu.tsx  env-editor.test.tsx  env-editor.tsx  env-menu.tsx  history-panel.tsx  http-request-editor.tsx  http-response-view.tsx  http-workspace.tsx  icons.tsx  log-filter-bar.tsx  log-row.tsx  log-stream.test.tsx  log-stream.tsx  message-card.tsx  message-library.tsx  resizer.tsx  toast-host.tsx  top-nav.tsx  tweak-controls.tsx  tweaks-panel-style.ts  tweaks-panel.tsx  ws-tab-panes.tsx  ws-workspace.tsx
src/data/: starter-data.ts
src/formats/: format-round-trip.test.ts  format-view.tsx  json-view.tsx  serialize.ts  xml.ts  yaml.ts
src/hooks/: use-environments.test.ts  use-environments.ts  use-history.test.ts  use-history.ts  use-http.test.ts  use-http.ts  use-log-filter.test.ts  use-log-filter.ts  use-panels.ts  use-toasts.test.ts  use-toasts.ts  use-tweaks.ts  use-workspace-store.ts
src/lib/: editable-name.tsx  export-file.test.ts  export-file.ts  history-log.ts  resolve-env.ts  secret-refs.test.ts  secret-refs.ts  util.ts
src/lib/codegen/: codegen.test.ts  escape.ts  index.ts  to-curl.ts  to-fetch.ts  to-wscat.ts  types.ts
src/styles/: app.css  colors_and_type.css
src/transport/: index.ts  mock-server-simulation.ts  mock-transport.test.ts  mock-transport.ts  tauri-transport.ts  transport.ts
