[package]
name = "socketman"
version = "0.1.0"
description = "SocketMan — Tauri 2 + Rust WebSocket/HTTP workbench"
authors = ["SocketMan"]
edition = "2021"
rust-version = "1.78"

# The library is what Tauri's mobile/desktop entrypoints link against.
[lib]
name = "socketman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Phase 1.5 backend skeleton + Phase 2 WS engine. Versions are pinned to minor
# precision here; the committed Cargo.lock locks exact patches for reproducibility
# (a `cargo audit` CI gate is added in Phase 7 per the supply-chain hygiene rule).
[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# WS transport (Phase 2). rustls-tls-native-roots = Windows cert store, valid certs
# only in Phase 2 (the self-signed toggle lands in Phase 3).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots", "connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
# Local TLS echo server for the in-test `wss://` proof (single-task select! on TLS).
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1"
rcgen = "0.13"

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
