[package]
name = "socketman"
version = "0.1.0"
description = "SocketMan — Tauri 2 + Rust WebSocket/HTTP workbench"
authors = ["SocketMan"]
edition = "2021"
rust-version = "1.78"

# The library is what Tauri's mobile/desktop entrypoints link against.
[lib]
name = "socketman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Phase 1.5 backend skeleton + Phase 2 WS engine. Versions are pinned to minor
# precision here; the committed Cargo.lock locks exact patches for reproducibility
# (a `cargo audit` CI gate is added in Phase 7 per the supply-chain hygiene rule).
[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# WS transport (Phase 2). rustls-tls-native-roots = Windows cert store, valid certs
# only in Phase 2 (the self-signed toggle lands in Phase 3).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots", "connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# Reliability (Phase 3): ping payload bytes + rustls for the per-connection
# insecure-TLS verifier. (The cancel token is a small in-crate type — see ws/cancel.rs.)
bytes = "1"
rustls = "0.23"
# HTTP client (Phase 4). default-features off drops native-tls. The `rustls`
# feature pulls the aws-lc-rs provider (same as the WS verifier in ws/tls.rs) +
# rustls-platform-verifier (the Windows cert store) — one TLS story, native roots.
# ONE strict client only — no insecure HTTP path in v1 (self-signed toggle is wss-only).
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2", "json"] }
# OS keychain for secret tokens (Phase 5). keyring 3.x — the mature, battle-tested
# `Entry::new(service, account)` API (4.0.x is a keyring-core rewrite with no soak;
# 3.x chosen deliberately for the security keystone). windows-native = Windows
# Credential Manager; default-features off keeps the Linux secret-service deps out.
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[dev-dependencies]
# Local TLS echo server for the in-test `wss://` proof (single-task select! on TLS).
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1"
rcgen = "0.13"

[features]
# This feature is used for production builds where `devUrl` is not used.
custom-protocol = ["tauri/custom-protocol"]
